--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -29,6 +29,10 @@
         <button type="submit" class="btn btn-primary w-100">로그인</button>
       </div>
     </form>
+    
+    <div class="mt-3">
+      <a href="/register" class="btn btn-secondary w-100">회원가입</a>
+    </div>
 
     <script>
       document.getElementById('loginForm')
